apps/nexrad-aws-notifier/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: nexrad-aws-notifier
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nexrad-aws-notifier
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nexrad-aws-notifier-ingress
  namespace: nexrad-aws-notifier
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: nexrad-aws-notifier
      app.kubernetes.io/instance: nexrad-aws-notifier
      app.kubernetes.io/name: nexrad-aws-notifier
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
